fix bioconductor build errors
- Update LICENSE to DCF format required by R packages
- Add proper license declaration (MIT + file LICENSE)
- Add VignetteBuilder and vignette dependencies to DESCRIPTION
- Reorganize dependencies: move SummarizedExperiment to Depends, remove unused imports
- Add proper vignette metadata for indexing
- Add error handling in .onLoad for OSF network calls
- Import SummarizedExperiment in NAMESPACE

--- a/vignettes/example_analysis.Rmd
+++ b/vignettes/example_analysis.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "Retinal Organoids counts data: Gene and Isoform Level Exploration"
-output: html_document
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Retinal Organoids counts data: Gene and Isoform Level Exploration}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include=FALSE}
